2007-10-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_character.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/gameswf_value.cpp
		added getVersion() global function,
		removed the deprecated call_method(), call_method0(),
		call_method_args(), call_method_parsed()
		better to use the user defined gameswf plugin

2007-10-20  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.h
		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_as_classes/as_mcloader.h
		* gameswf/gameswf_character.h
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_player.cpp: added struct player (uncompleted)
		* gameswf/gameswf_player.h: added struct player (uncompleted)
		* gameswf/gameswf_sound_handler_mp3.cpp : removed(outdated)
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/samples/test_moviecliploader.fla: testcase
		* gameswf/samples/test_moviecliploader.swf: testcase
		* gameswf/win32/VC8/libgameswf.vcproj
		rewritten mcLoader to provide the loading single frame movie

2007-10-20  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.h
		* gameswf/gameswf_as_classes/as_key.cpp
		* gameswf/gameswf_as_classes/as_mcloader.h
		* gameswf/gameswf_as_classes/as_xmlsocket.cpp
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_freetype.cpp:
		* gameswf/gameswf_listener.cpp: added new file
		* gameswf/gameswf_listener.h: added new file
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		* gameswf/gameswf_text.cpp
		* gameswf/gameswf_timers.cpp
		* gameswf/win32/VC8/libgameswf.vcproj
		Fixed & optimized listener