@@ -11,7 +11,7 @@
 
 #include "base/tu_file.h"
 #include "base/utility.h"
-#include <SDL.h>
+#include <SDL/SDL.h>
 
 
 // TODO: add error detection and reporting!!!
