@@ -1,3 +1,12 @@
+2007-11-05  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* base/demo.cpp
+		* base/ogl.cpp
+		* base/tu_file_SDL.cpp
+		* config
+		* gameswf/Makefile
+		Applied patch from Markus Sinner (patch for compiling with gcc-3.4)
+
 2007-10-21  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf.h
